labs/kube/03-ingress-sidecar/radial-busybox-curl.yaml
---
# kubectl apply -f radial-busybox-curl.yaml
# export POD_NAME=$(kubectl get pod -l run=radial-curl -o jsonpath='{.items[0].metadata.name}')
# kubectl exec -it ${POD_NAME} -- /bin/sh
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: radial-curl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: radial-curl
    spec:
      containers:
      - image: radial/busyboxplus:curl
        imagePullPolicy: IfNotPresent
        name: radial-curl
        stdin: true
        tty: true
---
