labs/kube/03-ingress-sidecar/hello-v3-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-v3
  namespace: hello
spec:
  podSelector:
    matchLabels:
      app: hello
      version: v3
  ingress:
  - ports:
    - protocol: TCP
      port: 5040
    from:
    - podSelector:
        matchLabels:
          istio: ingress
---
